--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,27 +5,18 @@ jobs:
   build:
     runs-on: macos-latest
     steps:
-      - name: 拉取代码
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: 安装 Theos 并配置路径
+      - name: 安装 Theos
         run: |
-          # 克隆 Theos 到指定目录
           git clone --recursive https://github.com/theos/theos.git $HOME/theos
-          # 强制写入环境变量（关键修复）
-          echo "THEOS=$HOME/theos" >> $GITHUB_ENV
-          echo "$HOME/theos/bin" >> $GITHUB_PATH
-          # 验证 Theos 路径是否正确
-          echo "Theos path: $THEOS"
-          ls $HOME/theos/makefiles  # 确认 tweak.mk 所在目录存在
+          brew install ldid  # 合并安装步骤，减少冗余
 
-      - name: 安装 ldid
-        run: brew install ldid
-
-      - name: 编译插件
+      - name: 编译插件（强制指定 Theos 路径）
         run: |
-          make clean
-          make package THEOS="$HOME/theos"  # 编译时显式指定 Theos 路径（双重保险）
+          # 直接用绝对路径调用 make，避免环境变量问题
+          $HOME/theos/bin/make clean THEOS="$HOME/theos"
+          $HOME/theos/bin/make package THEOS="$HOME/theos"
 
       - name: 上传产物
         uses: actions/upload-artifact@v4
