--- a/control
+++ b/control
@@ -1,9 +1,9 @@
-Package: com.yourname.virtualcamera  # 唯一标识（反向域名格式，如com.xxx.tweak）
-Name: VirtualCamera  # 插件名称（与Makefile一致）
+Package: com.lyonliangw.virtualcamera  # 唯一标识（替换为你的域名）
+Name: VirtualCamera  # 插件名称（与 Makefile 一致）
 Version: 1.0.0
 Architecture: iphoneos-arm64
-Description: 在线编译的虚拟相机插件
+Description: 虚拟相机插件（在线编译测试）
 Depends: mobilesubstrate, preferenceloader  # 必选依赖
-Maintainer: YourName
-Author: YourName
+Maintainer: lyonliangw
+Author: lyonliangw
 Section: Tweaks
