--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,17 +8,20 @@ jobs:
       - name: 拉取代码
         uses: actions/checkout@v4
 
-      - name: 手动搭建完整 Theos 环境（硬编码路径）
+      - name: 安装 Xcode 命令行工具（包含 clang）
+        run: xcode-select --install || true  # 已安装则忽略
+
+      - name: 手动搭建编译环境
         run: |
-          # 创建完整目录结构
+          # 创建 Theos 目录结构
           mkdir -p $HOME/theos/makefiles/master
           
-          # 1. 创建顶层 tweak.mk（直接指向 master/tweak.mk 的绝对路径）
+          # 顶层 tweak.mk（硬编码路径）
           cat > $HOME/theos/makefiles/tweak.mk << EOF
           include $HOME/theos/makefiles/master/tweak.mk
           EOF
           
-          # 2. 创建 master/tweak.mk（基础编译规则，硬编码路径）
+          # master/tweak.mk（核心编译逻辑）
           cat > $HOME/theos/makefiles/master/tweak.mk << EOF
           TWEAK_NAME ?= VirtualCamera
           \$(TWEAK_NAME)_FILES ?= Tweak.xm
@@ -26,33 +29,35 @@ jobs:
           \$(TWEAK_NAME)_LIBRARIES ?= substrate
           \$(TWEAK_NAME)_INSTALL_PATH = /Library/MobileSubstrate/DynamicLibraries
           
-          # 编译规则
+          # 编译动态库
           all: \$(TWEAK_NAME).dylib
           \$(TWEAK_NAME).dylib: \$(\$(TWEAK_NAME)_FILES)
               clang -dynamiclib -arch arm64 -isysroot \$(SDKROOT) \
               -framework Foundation -framework UIKit \
-              -L\$(THEOS)/lib -l\$(\$(TWEAK_NAME)_LIBRARIES) \
-              \$(\$(TWEAK_NAME)_CFLAGS) \$^ -o \$@
+              -I\$(THEOS)/include -L\$(THEOS)/lib \
+              -l\$(\$(TWEAK_NAME)_LIBRARIES) \$(\$(TWEAK_NAME)_CFLAGS) \$^ -o \$@
               ldid -S \$@
           
-          # 打包成 deb
+          # 打包 deb
           package: \$(TWEAK_NAME).dylib
               mkdir -p packages/DEBIAN
               mkdir -p packages/\$(\$(TWEAK_NAME)_INSTALL_PATH)
               cp \$(TWEAK_NAME).dylib packages/\$(\$(TWEAK_NAME)_INSTALL_PATH)/
               cp control packages/DEBIAN/
-              dpkg-deb -b packages \$(TWEAK_NAME).deb
+              dpkg-deb -b packages \$(TWEAK_NAME)_1.0.0_iphoneos-arm64.deb
           EOF
           
-          # 3. 安装依赖
-          brew install ldid clang make
-          # 4. 下载 iOS SDK（确保编译时有头文件）
+          # 安装 ldid（仅需这一个工具）
+          brew install ldid
+          
+          # 下载 iOS SDK（适配 iPhone 5s，选择 iOS 12 及以下版本）
           git clone --depth 1 https://github.com/xybp888/iOS-SDKs.git $HOME/iOS-SDKs
           echo "环境搭建完成"
 
-      - name: 编译插件（指定 SDK 路径）
+      - name: 编译插件（适配 iPhone 5s 的 iOS 版本）
         run: |
-          make package THEOS="$HOME/theos" SDKROOT="$HOME/iOS-SDKs/iPhoneOS15.0.sdk"
+          # iPhone 5s 是 arm64 架构，最高支持 iOS 12，选择对应 SDK
+          make package THEOS="$HOME/theos" SDKROOT="$HOME/iOS-SDKs/iPhoneOS12.4.sdk"
 
       - name: 上传产物
         uses: actions/upload-artifact@v4
