--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,20 +8,20 @@ jobs:
       - name: 拉取代码
         uses: actions/checkout@v4
 
-      - name: 安装 Xcode 命令行工具（包含 clang）
-        run: xcode-select --install || true  # 已安装则忽略
+      - name: 安装 Xcode 命令行工具（含 clang）
+        run: xcode-select --install || true  # 已安装则跳过
 
-      - name: 手动搭建编译环境
+      - name: 手动搭建编译环境（修复语法缩进）
         run: |
-          # 创建 Theos 目录结构
+          # 创建目录结构
           mkdir -p $HOME/theos/makefiles/master
           
-          # 顶层 tweak.mk（硬编码路径）
+          # 顶层 tweak.mk（硬编码绝对路径）
           cat > $HOME/theos/makefiles/tweak.mk << EOF
           include $HOME/theos/makefiles/master/tweak.mk
           EOF
           
-          # master/tweak.mk（核心编译逻辑）
+          # master/tweak.mk（核心编译逻辑，命令前用 Tab 缩进！）
           cat > $HOME/theos/makefiles/master/tweak.mk << EOF
           TWEAK_NAME ?= VirtualCamera
           \$(TWEAK_NAME)_FILES ?= Tweak.xm
@@ -29,34 +29,33 @@ jobs:
           \$(TWEAK_NAME)_LIBRARIES ?= substrate
           \$(TWEAK_NAME)_INSTALL_PATH = /Library/MobileSubstrate/DynamicLibraries
           
-          # 编译动态库
+          # 编译动态库（所有命令行前必须是 Tab，不是空格）
           all: \$(TWEAK_NAME).dylib
           \$(TWEAK_NAME).dylib: \$(\$(TWEAK_NAME)_FILES)
-              clang -dynamiclib -arch arm64 -isysroot \$(SDKROOT) \
-              -framework Foundation -framework UIKit \
-              -I\$(THEOS)/include -L\$(THEOS)/lib \
-              -l\$(\$(TWEAK_NAME)_LIBRARIES) \$(\$(TWEAK_NAME)_CFLAGS) \$^ -o \$@
-              ldid -S \$@
+          	clang -dynamiclib -arch arm64 -isysroot \$(SDKROOT) \
+          	-framework Foundation -framework UIKit \
+          	-I\$(THEOS)/include -L\$(THEOS)/lib \
+          	-l\$(\$(TWEAK_NAME)_LIBRARIES) \$(\$(TWEAK_NAME)_CFLAGS) \$^ -o \$@
+          	ldid -S \$@
           
-          # 打包 deb
+          # 打包 deb（命令前同样用 Tab）
           package: \$(TWEAK_NAME).dylib
-              mkdir -p packages/DEBIAN
-              mkdir -p packages/\$(\$(TWEAK_NAME)_INSTALL_PATH)
-              cp \$(TWEAK_NAME).dylib packages/\$(\$(TWEAK_NAME)_INSTALL_PATH)/
-              cp control packages/DEBIAN/
-              dpkg-deb -b packages \$(TWEAK_NAME)_1.0.0_iphoneos-arm64.deb
+          	mkdir -p packages/DEBIAN
+          	mkdir -p packages/\$(\$(TWEAK_NAME)_INSTALL_PATH)
+          	cp \$(TWEAK_NAME).dylib packages/\$(\$(TWEAK_NAME)_INSTALL_PATH)/
+          	cp control packages/DEBIAN/
+          	dpkg-deb -b packages \$(TWEAK_NAME)_1.0.0_iphoneos-arm64.deb
           EOF
           
-          # 安装 ldid（仅需这一个工具）
+          # 安装签名工具
           brew install ldid
           
-          # 下载 iOS SDK（适配 iPhone 5s，选择 iOS 12 及以下版本）
+          # 下载 iPhone 5s 适配的 SDK（iOS 12.4，最高支持版本）
           git clone --depth 1 https://github.com/xybp888/iOS-SDKs.git $HOME/iOS-SDKs
           echo "环境搭建完成"
 
-      - name: 编译插件（适配 iPhone 5s 的 iOS 版本）
+      - name: 编译插件（适配 iPhone 5s）
         run: |
-          # iPhone 5s 是 arm64 架构，最高支持 iOS 12，选择对应 SDK
           make package THEOS="$HOME/theos" SDKROOT="$HOME/iOS-SDKs/iPhoneOS12.4.sdk"
 
       - name: 上传产物
