--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,34 +5,28 @@ jobs:
   build:
     runs-on: macos-latest
     steps:
-      - name: 拉取代码（包含本地 libsubstrate.dylib）
+      - name: 拉取代码（含本地 libsubstrate）
         uses: actions/checkout@v4
 
       - name: 安装依赖工具
         run: |
-          xcode-select --install || true
-          brew install ldid
+          xcode-select --install || true  # 确保clang可用
+          brew install ldid  # 签名工具
 
-      - name: 搭建环境（使用仓库中的 substrate 库）
+      - name: 搭建编译环境
         run: |
-          # 创建 Theos 目录
-          mkdir -p $HOME/theos/lib $HOME/theos/include $HOME/theos/makefiles/master
+          # 创建Theos目录结构
+          mkdir -p $HOME/theos/{lib,include,makefiles/master}
           
-          # 1. 复制仓库中的 libsubstrate.dylib 到 Theos 库目录
-          cp ./libs/libsubstrate.dylib $HOME/theos/lib/
+          # 复制仓库中的substrate库到Theos
+          cp ./libs/libsubstrate.dylib $HOME/theos/lib/ || (echo "请确认libs/libsubstrate.dylib已上传"; exit 1)
           
-          # 2. 下载 substrate.h 头文件（备用链接）
+          # 下载substrate头文件（备用链接）
           curl -fL https://raw.githubusercontent.com/angelXwind/CydiaSubstrate/master/substrate.h -o $HOME/theos/include/substrate.h || \
           curl -fL https://gitlab.com/ios-tweak-dev/substrate-headers/-/raw/master/substrate.h -o $HOME/theos/include/substrate.h || \
-          (echo "substrate.h 下载失败"; exit 1)
+          (echo "substrate.h下载失败"; exit 1)
           
-          # 3. 验证库文件是否存在
-          if [ ! -f "$HOME/theos/lib/libsubstrate.dylib" ]; then
-            echo "错误：未找到 libsubstrate.dylib，请检查仓库中是否上传"
-            exit 1
-          fi
-          
-          # 4. 编写 makefile
+          # 编写makefile规则（Tab缩进！）
           cat > $HOME/theos/makefiles/tweak.mk << EOF
           include $HOME/theos/makefiles/master/tweak.mk
           EOF
@@ -60,7 +54,7 @@ jobs:
           	dpkg-deb -b packages \$(TWEAK_NAME)_1.0.0_iphoneos-arm64.deb
           EOF
           
-          # 5. 下载 iOS 12.4 SDK
+          # 下载iPhone 5s适配的iOS 12.4 SDK
           git clone --depth 1 https://github.com/xybp888/iOS-SDKs.git $HOME/iOS-SDKs
           echo "环境搭建完成"
 
