--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,28 +5,31 @@ jobs:
   build:
     runs-on: macos-latest
     steps:
-      - name: 拉取代码（含本地 libsubstrate）
+      - name: 拉取代码
         uses: actions/checkout@v4
 
-      - name: 安装依赖工具
+      - name: 安装依赖
         run: |
-          xcode-select --install || true  # 确保clang可用
-          brew install ldid  # 签名工具
+          xcode-select --install || true
+          brew install ldid
 
-      - name: 搭建编译环境
+      - name: 搭建环境（使用 libhooker 替代 substrate）
         run: |
-          # 创建Theos目录结构
+          # 创建目录
           mkdir -p $HOME/theos/{lib,include,makefiles/master}
           
-          # 复制仓库中的substrate库到Theos
-          cp ./libs/libsubstrate.dylib $HOME/theos/lib/ || (echo "请确认libs/libsubstrate.dylib已上传"; exit 1)
+          # 下载 libhooker 库（替代 substrate）
+          curl -L https://github.com/coolstar/libhooker/releases/download/1.2.0/libhooker.dylib -o $HOME/theos/lib/libsubstrate.dylib
+          # 下载头文件（兼容 substrate 接口）
+          curl -L https://raw.githubusercontent.com/coolstar/libhooker/master/include/substrate.h -o $HOME/theos/include/substrate.h
           
-          # 下载substrate头文件（备用链接）
-          curl -fL https://raw.githubusercontent.com/angelXwind/CydiaSubstrate/master/substrate.h -o $HOME/theos/include/substrate.h || \
-          curl -fL https://gitlab.com/ios-tweak-dev/substrate-headers/-/raw/master/substrate.h -o $HOME/theos/include/substrate.h || \
-          (echo "substrate.h下载失败"; exit 1)
+          # 验证文件
+          if [ ! -f "$HOME/theos/lib/libsubstrate.dylib" ]; then
+            echo "libhooker 下载失败"
+            exit 1
+          fi
           
-          # 编写makefile规则（Tab缩进！）
+          # 编写 makefile（同上，保持不变）
           cat > $HOME/theos/makefiles/tweak.mk << EOF
           include $HOME/theos/makefiles/master/tweak.mk
           EOF
@@ -54,11 +57,10 @@ jobs:
           	dpkg-deb -b packages \$(TWEAK_NAME)_1.0.0_iphoneos-arm64.deb
           EOF
           
-          # 下载iPhone 5s适配的iOS 12.4 SDK
+          # 下载 SDK
           git clone --depth 1 https://github.com/xybp888/iOS-SDKs.git $HOME/iOS-SDKs
-          echo "环境搭建完成"
 
-      - name: 编译插件
+      - name: 编译
         run: |
           make package THEOS="$HOME/theos" SDKROOT="$HOME/iOS-SDKs/iPhoneOS12.4.sdk"
 
